ci: add needs to build and push image job

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,6 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GORELEASER_GITHUB_TOKEN }}
   
   build-and-push-image:
+    needs: goreleaser
     runs-on: ubuntu-latest
 
     steps:
