--- a/.github/workflows/goreleaser-validator.yaml
+++ b/.github/workflows/goreleaser-validator.yaml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  goreleaser:
+  validate-goreleaser-build:
     runs-on: ubuntu-latest
     steps:
       -
