chore: update dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,9 @@ updates:
       prefix: "fix: "
     schedule:
       interval: "weekly"
+  - package-ecosystem: "github-actions"
+    directory: ".github/workflows"
+    commit-message:
+      prefix: "chore: "
+    schedule:
+      interval: "weekly"
