--- a/.github/workflows/golang-ci-lint.yaml
+++ b/.github/workflows/golang-ci-lint.yaml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [opened, edited, synchronize]
     branches: [ master ]
+    paths:
+      - 'Dockerfile'
+      - 'cmd/**'
+      - 'pkg/**'
+      - 'internal/**'
 
 permissions:
     contents: read
