--- a/.github/workflows/golang-ci-lint.yaml
+++ b/.github/workflows/golang-ci-lint.yaml
@@ -6,6 +6,7 @@ on:
     branches: [ master ]
     paths:
       - 'Dockerfile'
+      - '.golangci.yaml'
       - 'cmd/**'
       - 'pkg/**'
       - 'internal/**'
