--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=angelvargass_go-api
 sonar.organization=angelvargass
 sonar.projectName=go-api
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=/cmd,/pkg,/internal
+sonar.sources=./cmd,./pkg,./internal
