--- a/.github/workflows/docker-image-validator.yaml
+++ b/.github/workflows/docker-image-validator.yaml
@@ -10,21 +10,18 @@ on:
       - 'pkg/**'
       - 'internal/**'
 
+env:
+  IMAGE_NAME: go-api
+
 jobs:
-  validate-docker-build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Validate build configuration
-        uses: docker/bake-action@v6
-        with:
-          targets: default
-          push: false
+  build-scan-push:
+    uses: angelvargass/reusable-workflows/.github/workflows/reusable-docker-build-scan-push.yaml@v1
+    with:
+      registry: docker.io
+      image_name: ${{ env.IMAGE_NAME }}
+      image_tag: ${{ github.event.pull_request.head.sha }}
+      dockerfile_path: '.'
+      push: 'false'
+    secrets:
+      docker_username: ${{ vars.DOCKERHUB_USERNAME }}
+      docker_password: ${{ secrets.DOCKERHUB_TOKEN }}
