--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,9 +10,6 @@ permissions:
   contents: write
   packages: write
 
-env:
-  IMAGE_NAME: go-api
-
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -41,7 +38,7 @@ jobs:
     uses: angelvargass/reusable-workflows/.github/workflows/reusable-docker-build-scan-push.yaml@v1.0.0
     with:
       registry: docker.io
-      image_name: ${{ env.IMAGE_NAME }}
+      image_name: 'go-api'
       image_tag: ${{ github.ref_name }}
       dockerfile_path: '.'
     secrets:
