--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,12 @@ on:
         required: true
         type: boolean
         default: true
+
+      with-tag-version:
+        description: 'Tag to use for the release'
+        required: false
+        type: string
+        default: ''
   push:
     tags:
       - '*'
@@ -53,7 +59,7 @@ jobs:
     with:
       registry: docker.io
       image_name: 'go-api'
-      image_tag: ${{ github.ref_name }}
+      image_tag: ${{ inputs.with-tag-version != '' && inputs.with-tag-version || github.ref_name }}
       dockerfile_path: '.'
     secrets:
       docker_username: ${{ vars.DOCKERHUB_USERNAME }}
